build - allow *.ts types from google-app-scripts

--- a/google_apps_script/tsconfig.json
+++ b/google_apps_script/tsconfig.json
@@ -4,6 +4,12 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "outDir": "dist",
+    "types": ["google-apps-script"]
     // "skipLibCheck": true,  // https://www.typescriptlang.org/tsconfig#skipLibCheck
-  }
+  },
+
+  "include": [
+    // "src/**/*.ts"
+    "*.ts"
+  ]
 }
