--- a/google_apps_script/package.json
+++ b/google_apps_script/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "punycode": "^2.3.1",
     "url": "^0.11.3"
+  },
+  "devDependencies": {
+    "@types/google-apps-script": "^1.0.83"
   }
 }
