--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,27 @@
-__pycache__/
+# IDE Files
+.idea/
+
+# Node.js dependencies
+node_modules/
+google_apps_script/node_modules/
+package-lock.json
+
+# Approval test files
 *.received.*
-.idea/**
+
+# Python build files
+*.egg-info/
+*.pyc
+__pycache__/
+
+# Virtual environment directories
+venv/
+.env/
+
+# Distribution build directories
+build/
+dist/
+
+# Project-specific files
 diff_generation_files/
 sandbox/
-google_apps_script/node_modules/**
-package-lock.json
-build/**
-
-
